--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,15 +14,17 @@ sentence-transformers = "^2.2.0"
 # 명시적으로 버전을 관리하기 위해 별도로 추가합니다.
 transformers = "^4.38.0"
 
-# 아래 두 패키지는 현재 main.py에서 직접 사용하지는 않지만,
-# 향후 Hugging Face 기반 학습/추론 파이프라인 확장을 위해 유용합니다.
+# Hugging Face 기반 학습/추론 파이프라인 확장용(선택적이지만 유용)
 accelerate = "^0.28.0"
 datasets = "^2.18.0"
 
+# API 서버용
+fastapi = "^0.110.0"
+uvicorn = {version = "^0.27.0", extras = ["standard"]}
+
 # torch는 Docker 베이스 이미지(pytorch/pytorch:2.2.0-cuda12.1-cudnn8-runtime)에
 # 이미 GPU+CUDA 버전으로 설치되어 있으므로 여기서는 명시하지 않습니다.
-# 만약 로컬(비도커) 환경에서 Poetry만으로 설치해 개발한다면,
-# 해당 환경에 맞는 torch를 별도로 설치해야 합니다 (pip install torch ... 등).
+# 로컬(비도커) 환경에서 Poetry만 사용하는 경우에는 별도로 'pip install torch ...'가 필요할 수 있습니다.
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.0.0"
